@@ -28,6 +28,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Complete tests for Dictionary, env.keys() and env.values() for
       OverrideEnvironment. Enable env.setdefault() method, add tests.
 
+  From Joachim Kuebart:
+    - Suppress missing SConscript deprecation warning if `must_exist` is
+      used.
+
 
 RELEASE 4.0.1 - Mon, 16 Jul 2020 16:06:40 -0700
 
